--- a/UWFoodServices/res/values/arrays.xml
+++ b/UWFoodServices/res/values/arrays.xml
@@ -26,9 +26,9 @@
         <item>Any</item>
     </string-array>
     <string-array name="entries_connection_type_preference">
-        <item>Both Wifi and Data</item>
+        <item>Both Wi-Fi and Data</item>
         <item>Data Only</item>
-        <item>Wifi Only</item>
+        <item>Wi-Fi Only</item>
         <item>None</item>
     </string-array>
     <string-array name="entryvalues_connection_type_preference">
