--- a/UWFoodServices/res/layout/fragment_map.xml
+++ b/UWFoodServices/res/layout/fragment_map.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/mapFragment"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:map="http://schemas.android.com/apk/res-auto"
+
+  			  
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+    
+<fragment
+  android:id="@+id/map"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
   class="com.google.android.gms.maps.SupportMapFragment" />
+
+ </LinearLayout>
