--- a/UWFoodServices/res/layout/fragment_map.xml
+++ b/UWFoodServices/res/layout/fragment_map.xml
@@ -1,10 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:map="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+    
+<fragment
      android:id="@+id/mapFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-     map:cameraZoom="14.5"
-     map:cameraTargetLat="43.469828"
-  	 map:cameraTargetLng="-80.546415"
      class="com.google.android.gms.maps.SupportMapFragment" />
+
+<RadioGroup 
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal" 
+        android:background="#80000000"
+        android:padding="4dp" >
+
+        <RadioButton
+            android:id="@+id/ShowAll"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="@string/ShowAll"
+            android:textColor="#FFFFFF"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_weight="1" />
+        
+        <View
+            android:id="@+id/VerticalLine"
+            android:layout_width="1dip"
+            android:layout_height="match_parent"
+            android:background="#aaa" />
+
+        <RadioButton
+            android:id="@+id/Clear"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/Clear"
+            android:textColor="#FFFFFF"
+            android:layout_weight="1" />
+
+</RadioGroup>
+</FrameLayout>
