--- a/UWFoodServices/res/layout/activity_main_screen.xml
+++ b/UWFoodServices/res/layout/activity_main_screen.xml
@@ -1,49 +1,30 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainScreen" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:pj="http://schemas.android.com/apk/res/ca.uwaterloo.uwfoodservices"
+    xmlns:bm="ca.uwaterloo.uwfoodservices"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/radialback2"
+    android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/menuImage"
-        android:contentDescription="@string/mainscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/menu" 
-        android:adjustViewBounds="true"
-        android:clickable="true"/>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.5"
+        android:gravity="top"
+        android:padding="5dip" >
 
-    <ImageView
-        android:id="@+id/locationImage"
-        android:contentDescription="@string/mainscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/menuImage"
-        android:adjustViewBounds="true"
-        android:src="@drawable/hours"
-        android:clickable="true" />
-
-    <TextView
-        android:id="@+id/menuText"
-        android:layout_alignParentRight="@+id/menuImage"
-        android:layout_alignParentBottom="@+id/menuImage"
-        android:text="@string/menuText"
-        android:textSize="25sp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="0dp"
-        style="@style/style_white" />
-
-    <TextView
-        android:id="@+id/locationText"
-        android:layout_alignParentRight="@+id/locationImage"
-        android:layout_centerVertical="@+id/locationImage"
-        android:text="@string/locationText"
-        android:textSize="25sp"
-        android:layout_marginTop="225dp"
-        android:layout_marginLeft="155dp"
-        style="@style/style_white" />
-
-</RelativeLayout>
+        <ca.uwaterloo.mainscreencontrols.SpinningMenu
+            android:id="@+id/SpinningMenu"
+            android:layout_width="fill_parent"
+            android:layout_height="424dp"
+            android:layout_weight="0.93"
+            android:animationDuration="200"
+            pj:Items="@array/entries"
+            pj:Names="@array/names"
+            pj:SelectedItem="0"
+            pj:UseReflection="true" >
+        </ca.uwaterloo.mainscreencontrols.SpinningMenu>
+    </LinearLayout>
+    	
+</LinearLayout>
