Modified the about page layout. Added scrolling and made the action bar an overlay.

--- a/UWFoodServices/res/values/colors.xml
+++ b/UWFoodServices/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="goblinGreen">#3992B5</color>
     <color name="lvHeaderDividerColor">#3992B5</color>
     <color name="lvDividerColor">#A0A0A0</color>
+    <drawable name="black">#aa000000</drawable>
 </resources>
