--- a/UWFoodServices/res/layout/activity_about_page.xml
+++ b/UWFoodServices/res/layout/activity_about_page.xml
@@ -1,13 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context=".AboutPage" >
+    
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+	<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".AboutPage" >
-
+    android:layout_marginTop="25sp" >
+    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +37,8 @@
             android:text="@string/uw_food_menu"
             android:textSize="30sp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/lvHeaderTextColor" />
+            android:textColor="@color/lvHeaderTextColor"
+            android:layout_marginTop="5sp" />
 
         <View
             android:id="@+id/View02"
@@ -152,5 +164,6 @@
             android:textSize="15sp" />
 
     </LinearLayout>
-
-</RelativeLayout>
+    </RelativeLayout>
+	</ScrollView>
+</FrameLayout>
