--- a/UWFoodServices/res/layout/fragment_map.xml
+++ b/UWFoodServices/res/layout/fragment_map.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_height="fill_parent"
+	xmlns:map="http://schemas.android.com/apk/res-auto"
+	android:orientation="vertical" >
     
-<fragment
-     android:id="@+id/mapFragment"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     class="com.google.android.gms.maps.SupportMapFragment" />
-
 <RadioGroup 
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
@@ -45,4 +40,11 @@
             android:layout_weight="1" />
 
 </RadioGroup>
-</FrameLayout>
+
+<fragment
+     android:id="@+id/mapFragment"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     class="com.google.android.gms.maps.SupportMapFragment" />
+
+</LinearLayout>
