--- a/UWFoodServices/res/layout/activity_main_screen.xml
+++ b/UWFoodServices/res/layout/activity_main_screen.xml
@@ -16,8 +16,7 @@
         <ca.uwaterloo.mainscreencontrols.SpinningMenu
             android:id="@+id/SpinningMenu"
             android:layout_width="fill_parent"
-            android:layout_height="424dp"
-            android:layout_weight="0.93"
+            android:layout_height="match_parent"
             android:animationDuration="200"
             pj:Items="@array/entries"
             pj:Names="@array/names"
