--- a/UWFoodServices/res/layout/activity_main_screen.xml
+++ b/UWFoodServices/res/layout/activity_main_screen.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:pj="http://schemas.android.com/apk/res/ca.uwaterloo.uwfoodservices"
     xmlns:bm="ca.uwaterloo.uwfoodservices"
+    android:background="@drawable/radialback2"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
