#27: Implemented Watcard balances

--- a/UWFoodServices/res/values/arrays.xml
+++ b/UWFoodServices/res/values/arrays.xml
@@ -47,12 +47,14 @@
 		<item>@drawable/menu_icon</item>		
 		<item>@drawable/clock_icon</item> 		
 		<item>@drawable/settings_icon</item>		
-		<item>@drawable/aboutus_icon</item>					
+		<item>@drawable/aboutus_icon</item>	
+		<item>@drawable/aboutus_icon</item>				
 	</array>	
 	<array name="names">
 	    <item>Menu</item>
 	    <item>Locations and Hours</item>
 	    <item>Settings</item>
 	    <item>About Us</item>
+	    <item>WatCard Balance</item>
 	</array>
 </resources>
