--- a/UWFoodServices/res/layout/sliding_list.xml
+++ b/UWFoodServices/res/layout/sliding_list.xml
@@ -2,8 +2,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:dividerHeight="1dp"
-    android:divider="#b5b5b5"
+    android:dividerHeight="10dp"
+    android:divider="#000000"
     android:listSelector="@drawable/list_selector"
     android:id="@android:id/list"
     android:background="#000000" >
