Added cursor to login page. Fixed bug with logging in and logging out. (Logging in with wrong credentials would still take you to the right page)

--- a/UWFoodServices/res/layout/activity_login_watcard.xml
+++ b/UWFoodServices/res/layout/activity_login_watcard.xml
@@ -33,6 +33,7 @@
         android:background="#F8F8F8"
         android:textColor="#000000"
         android:ems="10"
+        android:textCursorDrawable="@null"
         android:hint="@string/Username"
         android:inputType="textPersonName|number"
         android:minHeight="50dp"
@@ -49,6 +50,7 @@
         android:layout_alignLeft="@+id/username"
         android:layout_below="@+id/username"
         android:layout_marginTop="16dp"
+        android:textCursorDrawable="@null"
         android:background="#F8F8F8"
         android:ems="10"
         android:hint="@string/Password"
