Implemented spinner as filter and included 'all' option

--- a/UWFoodServices/res/layout/locationlist.xml
+++ b/UWFoodServices/res/layout/locationlist.xml
@@ -1,8 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    
+    <Spinner 
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/spinner_array"
+    />
     
     <ListView
         android:id="@+id/list_restaurant"
@@ -14,4 +22,4 @@
 
     </ListView>
    
-</RelativeLayout>
+</LinearLayout >
