--- a/UWFoodServices/res/values/colors.xml
+++ b/UWFoodServices/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
+    <color name="gray">#BBBBBB</color>
     
     <!-- Menu List colors. -->
     <color name="lvHeaderTextColor">#3992B5</color>
