--- a/UWFoodServices/res/layout/fragment_product_info.xml
+++ b/UWFoodServices/res/layout/fragment_product_info.xml
@@ -1,5 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+<RelativeLayout 
+    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -30,3 +34,4 @@
     </ListView>
 
 </RelativeLayout>
+</ScrollView>
