Improve swiping speed of dialog tabs somewhat.

--- a/UWFoodServices/res/layout/fragment_product_info.xml
+++ b/UWFoodServices/res/layout/fragment_product_info.xml
@@ -14,8 +14,8 @@
 
     <TextView
         android:id="@+id/textIngredients"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignLeft="@+id/list_menu"
         android:layout_alignRight="@+id/list_menu"
         android:gravity="center"
@@ -26,8 +26,8 @@
     
     <ListView
         android:id="@+id/list_menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" 
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
         android:layout_margin="10dp"
         android:divider="@null"
         android:paddingTop="0dp" >
