Add watcard icon.

--- a/UWFoodServices/res/values/arrays.xml
+++ b/UWFoodServices/res/values/arrays.xml
@@ -48,7 +48,7 @@
 		<item>@drawable/clock_icon</item> 		
 		<item>@drawable/settings_icon</item>		
 		<item>@drawable/aboutus_icon</item>	
-		<item>@drawable/aboutus_icon</item>				
+		<item>@drawable/watcard_icon</item>				
 	</array>	
 	<array name="names">
 	    <item>Menu</item>
